# ribll2022

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: alignment.h  channel.h  defs.h  detectors.h  energy_loss.h  event.h  mapper.h  optimize_utilities.h  ppac_track.h  simulate_defs.h  statistics.h  telescope.h  telescopes.h  time_reference.h
include/calculator/: csi_energy_calculator.h  d2_energy_calculator.h  delta_energy_calculator.h  lost_energy_calculator.h  range_energy_calculator.h  target_energy_calculator.h
include/check/: chain_check.h
include/detector/: adssd.h  csi.h  detector.h  dssd.h  ppac.h  ssd.h  t0d1.h  t0d2.h  t0d3.h  tab.h  tabd.h  taf.h  tafd.h  tof.h  vme_trigger.h
include/event/: channel_event.h  csi_event.h  (+17 more)
src/: CMakeLists.txt  alignment.cpp  channel.cpp  detectors.cpp  energy_loss.cpp  mapper.cpp  statistics.cpp  telescope.cpp  telescopes.cpp  time_reference.cpp
src/calculator/: CMakeLists.txt  csi_energy_calculator.cpp  d2_energy_calculator.cpp  delta_energy_calculator.cpp  lost_energy_calculator.cpp  range_energy_calculator.cpp  target_energy_calculator.cpp
src/check/: CMakeLists.txt  chain_check.cpp
src/detector/: CMakeLists.txt  adssd.cpp  csi.cpp  detector.cpp  dssd.cpp  ppac.cpp  ssd.cpp  t0d1.cpp  t0d2.cpp  t0d3.cpp  tab.cpp  tabd.cpp  taf.cpp  tafd.cpp  tof.cpp  vme_trigger.cpp
src/event/: CMakeLists.txt  channel_event.cpp  channel_v2_event.cpp  csi_event.cpp  detect_event.cpp  dssd_event.cpp  filter_event.cpp  generate_event.cpp  particle_event.cpp  particle_type_event.cpp  pd_info_event.cpp  ppac_event.cpp  ssd_event.cpp  t0_event.cpp  ta_event.cpp  telescope_event.cpp  threebody_info_event.cpp  tof_event.cpp  trigger_event.cpp
src/mapper/: CMakeLists.txt  crate0_mapper.cpp  crate1_mapper.cpp  crate2_mapper.cpp  crate3_mapper.cpp  trace_mapper.cpp  xia_mapper.cpp
src/spectrum/: CMakeLists.txt  asymmetric_voigt.cpp  background_poly.cpp
src/statistics/: CMakeLists.txt  align_statistics.cpp  beam_identify_statistics.cpp  center_statistics.cpp  csv_line_reader.cpp  map_statistics.cpp  match_trigger_statistics.cpp  merge_case_statistics.cpp  merge_statistics.cpp  normalize_statistics.cpp  statistics.cpp  t0_hit_statistics.cpp  track_dssd_statistics.cpp  track_statistics.cpp  xt_period_statistics.cpp
src/telescope/: CMakeLists.txt  t0.cpp  taf.cpp  telescope.cpp
standalone/: CMakeLists.txt  align.cpp  analyze_time.cpp  analyze_trace.cpp  angle_correlate.cpp  beam_identify.cpp  calibrate.cpp  calibrate_result.cpp  coincide.cpp  coincide_v2.cpp  compare_be_info.cpp  correlate.cpp  cut_beam_threshold.cpp  fit_time_curve.cpp  info_pd.cpp  info_threebody.cpp  info_threebody_extra.cpp  init_energy_loss.cpp  map.cpp  mapping.cpp  match_trigger.cpp  merge.cpp  merge_and_track.cpp  merge_bind.cpp  normalize.cpp  normalize_result.cpp  normalize_time.cpp  particle.cpp  particle_identify.cpp  ppac_correlation.cpp  rebuild.cpp  ref_time.cpp  reftof.cpp  single_map.cpp  spectrum.cpp  spectrum_3a.cpp  taf_rebuild.cpp  taf_rebuild_deutron.cpp  trace_map.cpp  track.cpp
standalone/calculate/: CMakeLists.txt  initialize_energy_calculator.cpp
standalone/check/: CMakeLists.txt  check_angle.cpp  check_chain.cpp  check_t0_pid.cpp  check_tacsi_mapping.cpp  check_tafcsi_shape.cpp  check_threebody_info.cpp  check_threebody_time.cpp
standalone/filter/: CMakeLists.txt  filter_dead_range_xt.cpp  filter_he.cpp  filter_he_tail.cpp  filter_normalize.cpp  filter_t0d1d2_line.cpp  filter_time_curve.cpp
standalone/hole/: CMakeLists.txt  correct_hole_flag.cpp  hole_model.cpp  hole_pid.cpp  pick_hole_events.cpp  show_average_hole.cpp  show_d2_shift.cpp
standalone/image/: CMakeLists.txt  csi_calibrate.cpp  csi_error_fit.cpp  efficiency.cpp  ex_resolution.cpp  final_spectrum_bin.cpp  q_spectrum.cpp  rotational_band.cpp  simulate_energy.cpp  spectrum_v3_q_range.cpp  t0_pid_with_deutron.cpp  taf_edge_q_thickness.cpp  taf_pid_image.cpp  taf_pid_with_t0.cpp  target_from_ppac.cpp
standalone/optimize/: CMakeLists.txt  opt_calibrate.cpp  pd_group.cpp  ppac_group.cpp  single_ppac_track_parameter.cpp  threebody_group.cpp  threebody_optimize.cpp
standalone/show/: CMakeLists.txt  show_align_group.cpp  show_average_hole.cpp  show_beam_angle.cpp  show_calculate_t0d2.cpp  show_calibration.cpp  show_csi_calibrate.cpp  show_csi_calibrate_q.cpp  show_csi_energy_range.cpp  show_csi_error.cpp  show_csi_range_q.cpp  show_d2_calculate_resolution.cpp  show_d2_pixel.cpp  show_d3_hit.cpp  show_event_interval.cpp  show_event_mixing.cpp  show_gdc_offset.cpp  show_hole_model.cpp  show_merge_counts.cpp  show_normalize.cpp  show_pd_single_ppac.cpp  show_pid_width.cpp  show_pixel_energy.cpp  show_ppac_center.cpp  show_ppac_change.cpp  show_ppac_effect.cpp  show_ppac_effect2.cpp  show_ppac_normalize.cpp  show_resist_strip.cpp  show_spectrum_v2.cpp  show_t0_center.cpp  show_t0_hit.cpp  show_t0_inverse_tracking.cpp  show_t0_layers.cpp  show_t0_pid.cpp  show_t0_pid_angle.cpp  show_t0_rebuild_rate.cpp  show_t0_straight_pid.cpp  show_tacsi_mapping.cpp  show_taf_coincident_number.cpp  (+9 more)
standalone/simulate/: CMakeLists.txt  README.md  detect.cpp  efficiency.cpp  efficiency_v2.cpp  full_resolution.cpp  generate.cpp  generate.cu  live_time.cpp  ppac_detect.cpp  simulate_check_momentum.cpp  simulate_ppac_offset.cpp  simulate_rebuild.cpp  simulate_resist_strip.cpp  simulate_resolution.cpp  simulate_track.cpp  simulate_transfer_reaction.cpp  simulate_twobody.cpp  single_ppac_track.cpp  single_ppac_track_channel.py  single_ppac_track_generate.py  systematic_error.cpp  t0_detect.cpp  taf_detect.cpp  target_resolution.cpp  vtof_detect.cpp
standalone/spectrum/: CMakeLists.txt  angle_correlate_v2.cpp  dalitz.cpp  fit_spectrum.cpp  image_recoil_q.cpp  roofit_alone_spectrum.cpp  roofit_spectrum.cpp  roofit_spectrum_v2.cpp  significance_level.cpp  significance_level.py  significance_level_fixed.cpp  spectrum.cpp  spectrum_2a.cpp  spectrum_be9.cpp  spectrum_slice.cpp  spectrum_v2.cpp  spectrum_v3.cpp  taf_edge_spectrum.cpp
standalone/summary/: CMakeLists.txt  summarize_normalize_time.cpp
(+25 files in other folders)
